update page by category

--- a/src/main/resources/templates/web/fragments/header.html
+++ b/src/main/resources/templates/web/fragments/header.html
@@ -37,11 +37,11 @@
     <nav id="main-menu">
         <ul class="container d-flex nav-menu" >
             <li class="nav-item"><a href="/">Trang chủ</a></li>
-            <li class="nav-item"><a href="#">Cho thuê phòng trọ</a></li>
-            <li class="nav-item"><a href="#">Nhà cho thuê</a></li>
-            <li class="nav-item"><a href="#">Cho thuê căn hộ</a></li>
-            <li class="nav-item"><a href="#">Mặt bằng, văn phòng</a></li>
-            <li class="nav-item"><a href="#">Tìm người ở ghép</a></li>
+            <li class="nav-item"><a href="/cho-thue-phong-tro">Cho thuê phòng trọ</a></li>
+            <li class="nav-item"><a href="/cho-thue-nha">Nhà cho thuê</a></li>
+            <li class="nav-item"><a href="/cho-thue-can-ho">Cho thuê căn hộ</a></li>
+            <li class="nav-item"><a href="/cho-thue-mat-bang">Mặt bằng, văn phòng</a></li>
+            <li class="nav-item"><a href="/tim-nguoi-o-ghep">Tìm người ở ghép</a></li>
             <li class="nav-item"><a href="#">Tin tức</a></li>
             <li class="nav-item"><a href="#">Bảng giá dịch vụ</a></li>
         </ul>
