--- a/src/main/resources/static/web-assets/css/main.css
+++ b/src/main/resources/static/web-assets/css/main.css
@@ -46,16 +46,36 @@ a {
     cursor: pointer;
 }
 
-.filter-top .filter-item span {
-    font-size: 15px;
-    padding: 10px 30px 10px 22px;
-    margin-left: 5px;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    color: #777;
+.filter-top .filter-item:hover {
+    box-shadow: 0 0 10px 1px rgb(0 0 0 / 10%);
 }
+
+.filter-top .filter-item button {
+    font-size: 15px;
+    padding: 0 30px 0 22px;
+    height: 35px;
+    line-height: 35px;
+    width: 100%;
+    display: inline-block;
+    color: #777;
+    background-color: #fff;
+    border-radius: 5px;
+    border: none;
+    max-width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: left;
+}
+
+.filter-top .filter-item button.filter-button-active {
+    font-weight: 700;
+    color: #000;
+    max-width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 
 .filter-top .filter-item.filter-submit {
     background-color: #0071c2;
@@ -66,10 +86,12 @@ a {
     cursor: pointer;
 }
 
-.filter-top .filter-item.filter-submit span {
-    width: auto;
+.filter-top .filter-item.filter-submit button {
+    width: 100%;
+    text-align: center;
     padding-right: 0;
     padding-left: 0;
+    background-color: #0071c2;
     color: #fff;
 }
 
@@ -95,6 +117,10 @@ a {
     pointer-events: none;
 }
 
+.filter-top .filter-submit::after {
+    display: none;
+}
+
 .filter-top .filter-item.post-estate-type::before {
     background: url('/web-assets/image/building-icon.svg') center no-repeat;
     background-size: contain;
@@ -118,16 +144,224 @@ a {
 .filter-top .filter-item.filter-submit::before {
     background: url('/web-assets/image/search-white-icon.svg') center no-repeat;
     background-size: contain;
-    position: relative;
     width: 16px;
     height: 16px;
     display: inline-block;
-    margin-right: 5px;
+    margin-left: 60px;
 }
 
-.filter-top .filter-item:last-child::after {
+
+/*filter modal*/
+.modal-overlay {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Modal */
+.filter-popup {
+    display: none;
+    position: fixed;
+    z-index: 99999;
+    top: 60px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    width: 700px;
+    max-height: 500px;
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: 8px;
+}
+
+/* Header của modal */
+.filter-popup-header {
+    height: 45px;
+    text-transform: uppercase;
+    padding: 0 40px;
+    border-bottom: 1px solid #ddd;
+    font-size: 16px;
+    font-weight: bold;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+/* Đóng modal */
+.popup-close {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 45px;
+    height: 45px;
+    background: url('/web-assets/image/left-arrow.svg') center no-repeat;
+    background-size: 50%;
+    text-indent: -999999px;
+    cursor: pointer;
+}
+
+
+/* Nội dung của modal */
+.filter-popup-content {
+    padding: 10px 25px;
+    height: calc(100% - 40px - 50px);
+    overflow-y: scroll;
+    /* width: 100%; */
+}
+/* Slider label */
+.filter-popup-label{
+    display: block;
+    width: 100%;
+    text-align: center;
+    border: 0;
+    color: #FF6600;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+
+.filter-range-wrapper {
+    position: relative;
+    padding: 0 20px;
+}
+
+.filter-range-min {
+    position: absolute;
+    left: 10px;
+    bottom: -35px;
+    font-size: 14px;
+    color: #333;
+}
+
+.filter-range-max {
+    position: absolute;
+    right: 0;
+    bottom: -35px;
+    font-size: 14px;
+    color: #333;
+}
+
+
+/* Danh sách chọn nhanh */
+.custom-list-ranger {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.btn-quick-select {
+    padding: 5px 15px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    margin: 5px;
+    display: inline-block;
+    border: 1px solid #f1f1f1;
+    cursor: pointer;
+}
+
+.btn-quick-select:hover {
+    background-color: #ddd;
+}
+
+.btn-quick-select.quick-select-active {
+    background-color: #007aff;
+    color: #fff;
+}
+
+/* Footer của modal */
+.filter-popup-footer {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filter-btn-bottom {
+    width: 100%;
+    height: 100%;
+    background-color: orange;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: none;
+}
+
+.noUi-connect {
+    background-color: #FF7F00;
+}
+
+.noUi-horizontal {
+    height: 6px;
+}
+
+#priceRange .noUi-handle,
+#acreageRange .noUi-handle {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    right: -12px;
+    top: -8px;
+}
+
+.noUi-handle:after, .noUi-handle:before {
     display: none;
 }
+
+/* modal location */
+.filter-list-option ul>li {
+    padding: 12px 10px 12px 25px;
+    border-bottom: 1px solid #ddd;
+    font-size: 16px;
+    position: relative;
+    cursor: pointer;
+}
+
+.filter-list-option ul>li:hover {
+    color: #007aff;
+}
+
+.filter-list-option ul>li:before {
+    background: url('/web-assets/image/cirlcle-rec.svg') center no-repeat;
+    background-size: contain;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -8px;
+    display: block;
+    content: "";
+    opacity: .45;
+}
+
+.filter-list-option ul>li.selected-option {
+    font-weight: 700;
+    color: #007aff;
+}
+
+.filter-list-option ul>li.selected-option:before {
+    background: url('/web-assets/image/cirlcle-rec-active.svg') center no-repeat;
+    background-size: contain;
+    opacity: 1;
+}
+
+
 
 /* top-location */
 
@@ -183,7 +417,7 @@ a {
     color: #f60;
 }
 
-/* conten */
+/* content */
 
 /* section-right */
 
