--- a/src/main/resources/templates/web/fragments/footer.html
+++ b/src/main/resources/templates/web/fragments/footer.html
@@ -35,7 +35,7 @@
                     <a href="">Zalo: 0999999999</a>
                 </div>
                 <div class="support-contact-item d-flex flex-column">
-                            <span class="support-contact-title">
+                            <span class="contact-item-title">
                                 Phản ánh/Khiếu nại
                             </span>
                     <a href="">Điện thoại: 0999999999</a>
@@ -57,28 +57,28 @@
                     </div>
                     <ul class="links-item-sublink">
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Hồ Chí Minh</a>
+                            <a href="/cho-thue-phong-tro/Hồ Chí Minh">Cho thuê phòng trọ Hồ Chí Minh</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Hà Nội</a>
+                            <a href="/cho-thue-phong-tro/Hà Nội">Cho thuê phòng trọ Hà Nội</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Đà Nẵng</a>
+                            <a href="/cho-thue-phong-tro/Đà Nẵng">Cho thuê phòng trọ Đà Nẵng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Cần thơ</a>
+                            <a href="/cho-thue-phong-tro/Cần Thơ">Cho thuê phòng trọ Cần thơ</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Bình Dương</a>
+                            <a href="/cho-thue-phong-tro/Bình Dương">Cho thuê phòng trọ Bình Dương</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Đồng Nai</a>
+                            <a href="/cho-thue-phong-tro/Đồng Nai">Cho thuê phòng trọ Đồng Nai</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Bà Rịa - Vũng Tàu</a>
+                            <a href="/cho-thue-phong-tro/Vũng Tàu">Cho thuê phòng trọ Bà Rịa - Vũng Tàu</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê phòng trọ Khánh Hòa</a>
+                            <a href="/cho-thue-phong-tro/Khánh Hòa">Cho thuê phòng trọ Khánh Hòa</a>
                         </li>
                     </ul>
                 </div>
@@ -90,25 +90,25 @@
                     </div>
                     <ul class="links-item-sublink">
                         <li class="">
-                            <a href="">Cho thuê nhà Hồ Chí Minh</a>
+                            <a href="/cho-thue-nha/Hồ Chí Minh">Cho thuê nhà Hồ Chí Minh</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Hà Nội</a>
+                            <a href="/cho-thue-nha/Hà Nội">Cho thuê nhà Hà Nội</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Bình Dương</a>
+                            <a href="/cho-thue-nha/Bình Dương">Cho thuê nhà Bình Dương</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Đà Nẵng</a>
+                            <a href="/cho-thue-nha/Đà Nẵng">Cho thuê nhà Đà Nẵng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Đồng Nai</a>
+                            <a href="/cho-thue-nha/Đồng Nai">Cho thuê nhà Đồng Nai</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Cần Thơ</a>
+                            <a href="/cho-thue-nha/Cần Thơ">Cho thuê nhà Cần Thơ</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê nhà Khánh Hòa</a>
+                            <a href="/cho-thue-nha/Khánh Hòa">Cho thuê nhà Khánh Hòa</a>
                         </li>
                     </ul>
                 </div>
@@ -120,22 +120,22 @@
                     </div>
                     <ul class="links-item-sublink">
                         <li class="">
-                            <a href="">Cho thuê căn hộ Hồ Chí Minh</a>
+                            <a href="/cho-thue-can-ho/Hồ Chí Minh">Cho thuê căn hộ Hồ Chí Minh</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê căn hộ Hà Nội</a>
+                            <a href="/cho-thue-can-ho/Hà Nội">Cho thuê căn hộ Hà Nội</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê căn hộ Bình Dương</a>
+                            <a href="/cho-thue-can-ho/Bình Dương">Cho thuê căn hộ Bình Dương</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê căn hộ Đà Nẵng</a>
+                            <a href="/cho-thue-can-ho/Đà Nẵng">Cho thuê căn hộ Đà Nẵng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê căn hộ Hải Phòng</a>
+                            <a href="/cho-thue-can-ho/Hải Phòng">Cho thuê căn hộ Hải Phòng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê căn hộ Khánh Hòa</a>
+                            <a href="/cho-thue-can-ho/Khánh Hòa">Cho thuê căn hộ Khánh Hòa</a>
                         </li>
 
                     </ul>
@@ -148,22 +148,22 @@
                     </div>
                     <ul class="links-item-sublink">
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Hồ Chí Minh</a>
+                            <a href="/cho-thue-mat-bang/Hồ Chí Minh">Cho thuê mặt bằng Hồ Chí Minh</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Hà Nội</a>
+                            <a href="/cho-thue-mat-bang/Hà Nội">Cho thuê mặt bằng Hà Nội</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Bình Dương</a>
+                            <a href="/cho-thue-mat-bang/Bình Dương">Cho thuê mặt bằng Bình Dương</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Đà Nẵng</a>
+                            <a href="/cho-thue-mat-bang/Đà Nẵng">Cho thuê mặt bằng Đà Nẵng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Hải Phòng</a>
+                            <a href="/cho-thue-mat-bang/Hải Phòng">Cho thuê mặt bằng Hải Phòng</a>
                         </li>
                         <li class="">
-                            <a href="">Cho thuê mặt bằng Khánh Hòa</a>
+                            <a href="/cho-thue-mat-bang/Khánh Hòa">Cho thuê mặt bằng Khánh Hòa</a>
                         </li>
                     </ul>
                 </div>
@@ -175,28 +175,28 @@
                     </div>
                     <ul class="links-item-sublink">
                         <li class="">
-                            <a href="">Tìm người ở ghép Hồ Chí Minh</a>
+                            <a href="/tim-nguoi-o-ghep/Hồ Chí Minh">Tìm người ở ghép Hồ Chí Minh</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Hà Nội</a>
+                            <a href="/tim-nguoi-o-ghep/Hà Nội">Tìm người ở ghép Hà Nội</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Đà Nẵng</a>
+                            <a href="/tim-nguoi-o-ghep/Đà Nẵng">Tìm người ở ghép Đà Nẵng</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Bình Dương</a>
+                            <a href="/tim-nguoi-o-ghep/Bình Dương">Tìm người ở ghép Bình Dương</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Cần Thơ</a>
+                            <a href="/tim-nguoi-o-ghep/Cần Thơ">Tìm người ở ghép Cần Thơ</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Đồng Nai</a>
+                            <a href="/tim-nguoi-o-ghep/Đồng Nai">Tìm người ở ghép Đồng Nai</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Hải Phòng</a>
+                            <a href="/tim-nguoi-o-ghep/Hải Phòng">Tìm người ở ghép Hải Phòng</a>
                         </li>
                         <li class="">
-                            <a href="">Tìm người ở ghép Khánh Hòa</a>
+                            <a href="/tim-nguoi-o-ghep/Khánh Hòa">Tìm người ở ghép Khánh Hòa</a>
                         </li>
                     </ul>
                 </div>
