--- a/src/main/resources/templates/web/fragments/header.html
+++ b/src/main/resources/templates/web/fragments/header.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,22 +12,65 @@
 <body>
 <header id="header">
     <div class="container container-header d-flex justify-content-between align-items-center">
-        <a href="#">
+        <a href="/">
             <img src="/web-assets/image/logo.png" alt="logo" class="logo-top">
         </a>
-        <div class="user-welcome">
+        <div class="user-welcome d-flex  align-items-center">
+            <div class="d-inline-block" sec:authorize="isAuthenticated()" style="height: 40px">
+                <a class="welcome-text" href="">
+                    <img th:src="${#authentication.principal.user.avatar}" alt="" style="border: 1px solid #ddd; width: 40px; height: 40px; border-radius: 50%; margin-right: 5px; object-fit: cover">
+                    <div>
+                        <span style="display: block; font-size: 16px; margin-bottom: 3px; max-width: 200px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;">
+                            Xin chào,
+                            <strong th:text="${#authentication.principal.user.name}">thi</strong>
+                        </span>
+                    </div>
+                </a>
+            </div>
             <a href="" class="btn">
-                <i class="fa-solid fa-heart me-2"></i>
+                <i class="fa-regular fa-heart me-2"></i>
                 <span class="btn-text">Yêu thích</span>
             </a>
-            <a href="" class="btn">
-                <i class="fa-solid fa-user-plus me-2"></i>
+            <a href="/dang-nhap" class="btn" sec:authorize="!isAuthenticated()">
+                <i class="fa-regular fa-user me-2"></i>
                 <span class="btn-text">Đăng nhập</span>
             </a>
-            <a href="" class="btn">
+            <a href="/dang-ky" class="btn" sec:authorize="!isAuthenticated()">
                 <i class="fa-solid fa-arrow-up-right-from-square me-2"></i>
                 <span class="btn-text">Đăng ký</span>
             </a>
+            <div class="d-inline-block" sec:authorize="isAuthenticated() && hasRole('USER')">
+                <div class="dropdown ">
+                    <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa-solid fa-list me-2"></i>
+                        <span class="btn-text">Quản lý tài khoản</span>
+                    </a>
+
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item dang-tin" href="#"><i></i>Đăng tin cho thuê</a></li>
+                        <li><a class="dropdown-item quan-ly-tin-dang" href="#"><i></i>Quản lý tin đăng</a></li>
+                        <li><a class="dropdown-item nap-tien" href="#"><i></i>Nạp tiền</a></li>
+                        <li><a class="dropdown-item lich-su-nap-tien" href="#"><i></i>Lịch sử nạp tiền</a></li>
+                        <li><a class="dropdown-item thong-tin-ca-nhan" href="#"><i></i>Thông tin cá nhân</a></li>
+                        <li><a class="dropdown-item tin-yeu-thich" href="#"><i></i>Tin yêu thích</a></li>
+                        <li><a class="dropdown-item dang-xuat" href="/logout"><i></i>Đăng xuất</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="d-inline-block" sec:authorize="isAuthenticated() && hasRole('ADMIN') ">
+                <div class="dropdown ">
+                    <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa-solid fa-list me-2"></i>
+                        <span class="btn-text">Quản lý hệ thống</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item trang-quan-tri" href="#"><i></i>Trang quản trị</a></li>
+                        <li><a class="dropdown-item dang-xuat" href="/logout"><i></i>Đăng xuất</a></li>
+                    </ul>
+                </div>
+            </div>
+
             <a href="" class="btn btn-add-post">
                 <i class="fa-solid fa-circle-plus me-2"></i>
                 <span class="btn-text">Đăng tin miễn phí</span>
